--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Страница каталога Device</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
 
   <body>
@@ -259,7 +260,7 @@
         <div class="page-footer-info">
           <a class="page-footer-logo" href="index.html"><img src="images/logo.svg" alt="DEVICE" width="145"
               height="36"></a>
-          <adress class="page-footer-text">Санкт-Петербург,&nbspнабережная реки Карповки, 5, литера П.</adress>
+          <p class="page-footer-text">Санкт-Петербург,&nbsp;набережная реки Карповки, 5, литера П.</p>
         </div>
         <div class="page-footer-services">
           <div class="page-footer-link-block">
