--- a/catalog.html
+++ b/catalog.html
@@ -187,7 +187,7 @@
                 <article class="goods-item">
                   <img class="goods-item-img" src="images/selfy-1.jpg" alt="Любительская селфи-палка" width="360"
                     height="380">
-                  <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+                  <a class="goods-item-more-link" href="#">Подробнее</a>
                   <div class="goods-item-info">
                     <h3 class="goods-item-title"><a class="goods-item-link" href="#">Любительская<br>селфи-палка</a>
                     </h3>
@@ -197,7 +197,7 @@
                 <article class="goods-item">
                   <img class="goods-item-img" src="images/selfy-2.jpg" alt="Профессиональная селфи-палка" width="360"
                     height="380">
-                  <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+                  <a class="goods-item-more-link" href="#">Подробнее</a>
                   <div class="goods-item-info">
                     <h3 class="goods-item-title"><a class="goods-item-link" href="#">Профессиональная<br>селфи-палка</a>
                     </h3>
@@ -207,7 +207,7 @@
                 <article class="goods-item">
                   <img class="goods-item-img" src="images/selfy-3.jpg" alt="Непотопляемая селфи-палка" width="360"
                     height="380">
-                  <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+                  <a class="goods-item-more-link" href="#">Подробнее</a>
                   <div class="goods-item-info">
                     <h3 class="goods-item-title"><a class="goods-item-link" href="#">Непотопляемая<br>селфи-палка</a>
                     </h3>
@@ -217,7 +217,7 @@
                 <article class="goods-item">
                   <img class="goods-item-img" src="images/selfy-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360"
                     height="380">
-                  <a class="goods-item-more-link visually-hidden" href="#">Подробнее</a>
+                  <a class="goods-item-more-link" href="#">Подробнее</a>
                   <div class="goods-item-info">
                     <h3 class="goods-item-title"><a class="goods-item-link" href="#">Селфи-палка «Следуй<br>за мной»</a>
                     </h3>
@@ -271,30 +271,33 @@
           <ul class="page-footer-social-link-block">
             <li class="page-footer-social-link-item-telegram">
               <a class="page-footer-social-link telegram" href="https://t.me/htmlacademy"><span
-                  class=" visually-hidden">Telegram</span></a>
-              <svg class="telegram-link" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
-                width="14" height="12" fill="none" viewBox="0 0 14 12">
-                <path fill="#444"
-                  d="M12.443.074.623 4.632c-.807.324-.802.774-.148.974l3.035.947 7.021-4.43c.332-.202.635-.093.386.128L5.228 7.385l-.209 3.129c.307 0 .442-.141.614-.307l1.474-1.433 3.066 2.264c.565.312.971.152 1.112-.523l2.013-9.485c.206-.826-.316-1.2-.855-.956Z" />
-              </svg>
+                  class=" visually-hidden">Telegram</span>
+                <svg class="telegram-link" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+                  width="14" height="12" fill="none" viewBox="0 0 14 12">
+                  <path fill="#444"
+                    d="M12.443.074.623 4.632c-.807.324-.802.774-.148.974l3.035.947 7.021-4.43c.332-.202.635-.093.386.128L5.228 7.385l-.209 3.129c.307 0 .442-.141.614-.307l1.474-1.433 3.066 2.264c.565.312.971.152 1.112-.523l2.013-9.485c.206-.826-.316-1.2-.855-.956Z" />
+                </svg>
+              </a>
             </li>
             <li class="page-footer-social-link-item-youtube">
               <a class="page-footer-social-link youtube" href="https://www.youtube.com/user/htmlacademyru"><span
-                  class="visually-hidden">Youtube</span></a>
-              <svg class="youtube-link" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
-                width="16" height="11" fill="none" viewBox="0 0 16 11">
-                <path fill="#444"
-                  d="M15.667 1.675a1.857 1.857 0 0 0-.51-.847 2.034 2.034 0 0 0-.893-.495c-1.252-.33-6.268-.33-6.268-.33a51.083 51.083 0 0 0-6.26.314 2.107 2.107 0 0 0-.892.506c-.246.238-.425.53-.518.851A19.393 19.393 0 0 0 0 5.337C-.008 6.564.101 7.79.326 8.999c.091.32.27.611.516.846.248.236.556.406.894.496 1.27.329 6.26.329 6.26.329 2.094.024 4.188-.08 6.268-.313.335-.087.642-.257.892-.495.244-.23.42-.524.51-.847.23-1.207.342-2.434.334-3.663a17.72 17.72 0 0 0-.333-3.678ZM6.402 7.619V3.055l4.173 2.282L6.402 7.62Z" />
-              </svg>
+                  class="visually-hidden">Youtube</span>
+                <svg class="youtube-link" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+                  width="16" height="11" fill="none" viewBox="0 0 16 11">
+                  <path fill="#444"
+                    d="M15.667 1.675a1.857 1.857 0 0 0-.51-.847 2.034 2.034 0 0 0-.893-.495c-1.252-.33-6.268-.33-6.268-.33a51.083 51.083 0 0 0-6.26.314 2.107 2.107 0 0 0-.892.506c-.246.238-.425.53-.518.851A19.393 19.393 0 0 0 0 5.337C-.008 6.564.101 7.79.326 8.999c.091.32.27.611.516.846.248.236.556.406.894.496 1.27.329 6.26.329 6.26.329 2.094.024 4.188-.08 6.268-.313.335-.087.642-.257.892-.495.244-.23.42-.524.51-.847.23-1.207.342-2.434.334-3.663a17.72 17.72 0 0 0-.333-3.678ZM6.402 7.619V3.055l4.173 2.282L6.402 7.62Z" />
+                </svg>
+              </a>
             </li>
             <li class="page-footer-social-link-item-twitter">
               <a class="page-footer-social-link twitter" href="https://twitter.com/htmlacademy_ru"><span
-                  class="visually-hidden">Twitter</span></a>
-              <svg class="twitter-link" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
-                width="15" height="15" fill="none" viewBox="0 0 15 15">
-                <path fill="#444"
-                  d="M9.7.155c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4-.6-.2-1.8-3.1-.8-4.6 1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" />
-              </svg>
+                  class="visually-hidden">Twitter</span>
+                <svg class="twitter-link" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+                  width="15" height="15" fill="none" viewBox="0 0 15 15">
+                  <path fill="#444"
+                    d="M9.7.155c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.3-2.8 10.4-8.9 10.3h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.8.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4-.6-.2-1.8-3.1-.8-4.6 1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z" />
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
